feat(analytics): add google analytics tracking code
Update organization address and contact details in schema markup

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-16TTP1RVVT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-16TTP1RVVT');
+    </script>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kopdesa — Pelatihan & Konsultasi Koperasi Desa | kopdesa.id</title>
@@ -35,14 +44,15 @@
       "description": "Pelatihan, mentoring, dan konsultasi untuk koperasi desa dan UMKM",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Jl. Pembangunan Desa No. 123",
-        "addressLocality": "Jakarta Selatan",
-        "postalCode": "12345",
+        "streetAddress": "Kaliurang St KM.5 No.21, Karang Wuni, Caturtunggal, Depok",
+        "addressLocality": "Sleman Regency",
+        "addressRegion": "Special Region of Yogyakarta",
+        "postalCode": "55281",
         "addressCountry": "ID"
       },
       "contactPoint": {
         "@type": "ContactPoint",
-        "telephone": "+62-812-3456-7890",
+        "telephone": "+62-822-9789-8514",
         "contactType": "customer service",
         "availableLanguage": "Indonesian"
       },
